[project]
name = "animal-shelter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cihanyatbaz7", email = "cihan.yatbaz@xebia.com" }
]
requires-python = ">=3.11.6"
dependencies = [
    "pandas>=2.3.3",
]

[project.scripts]
animal-shelter = "animal_shelter:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.251201",
    "pre-commit>=4.5.0",
    "ruff>=0.14.9",
]

[tool.ruff.lint]
extend-select = [
  "UP", # pyupgrade
  "D",  # pydocstyle
  "N",  # PEP8 names
  "I"  # isort
]

[tool.ruff]
exclude = [
    ".git",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
     ".venv"
     ]
